--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <header>
 
-         <img src="/img/logo.png" alt="タウンログロゴ" id="logo">
+         <img src="img/logo.png" alt="タウンログロゴ" id="logo">
         
 
     </header>
