--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
             <hr class="hr1">
             <div class="shop-img">
                 
-                <img src="/img/shopimg2.jpg" alt="施設の写真" class="popup-img">
-                <img src="/img/shopimg3.jpg" alt="施設の写真" class="popup-img">
-                <img src="/img/shopimg4.jpg" alt="施設の写真" class="popup-img">
-                <img src="/img/shopimg5.jpg" alt="施設の写真" class="popup-img">
-                <img src="/img/shopimg6.jpg" alt="施設の写真" class="popup-img">
+                <img src="./img/shopimg2.jpg" alt="施設の写真" class="popup-img">
+                <img src="./img/shopimg3.jpg" alt="施設の写真" class="popup-img">
+                <img src="./img/shopimg4.jpg" alt="施設の写真" class="popup-img">
+                <img src="./img/shopimg5.jpg" alt="施設の写真" class="popup-img">
+                <img src="./img/shopimg6.jpg" alt="施設の写真" class="popup-img">
             </div>
             <hr class="hr1">
         </div>
